frontend/src/styles/board.css
main {
    margin-top: 20px;
    overflow: auto;
}

.game {
    height: 90%;
}

.game-buttons {
    height: 10%;
}

.game-buttons button {
    height: 50px;
    padding: 1px 5px;
    border: 3px solid #5b5854;
    background-color: #353535;
    font-size: 15pt;
    font-style: normal;
    font-weight: bold;
    color: white;
    margin: 2px;
    transition: all ease-in-out 0.5s;
}

.game-buttons button:hover {
    background-color: #7b7b7b;
}

.description {
    padding: 0;
}

textarea {
    width: 95%; 
    height: auto;
    background: none;
    border: none;
    color: white; 
    font-size: 15px;
    padding: 10px;
    resize: vertical; 
    overflow-y: auto;
    overflow-x: hidden;
  }

tfoot {
    text-align: center;
}

.add-move {
    width: 60%;
    height: 40px;
    margin-top: 15px;
    background: none;
    border: 2px solid rgb(150, 150, 150);
    border-radius: 5px;
    transition: all ease-in-out .5s;
}

.add-move:hover {
    background: #21609b;
    transform: scale(1.05);

}

.add-move img {
    height: 100%;
}

.move img {
    height: 100%;
}

.main-moves .move-input {
    background: none;
    border: none;
    height: 100%;
    width: 100%;
    color: white;
    font-size: 16px;
}

.main-moves move img{
    height: 50%;
}

.board-name {
    width: 100%;
    margin: 0 auto;
    padding: 20px 20px;
}

.chess-game {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    justify-content: space-between;
    padding: 20px 20px;
    box-sizing: border-box;
    margin: 0 auto;
}

.board-name input {
    width: 100%;
    padding: 20px;
    border: none;
    background: none;
    color: rgb(195, 195, 195);
    font-size: 30px;
    outline: none;
}

.board-name ::placeholder {
    color: rgb(195, 195, 195);
}

.options {
    margin-top: 50px;
    margin-bottom: 50px;
}

.options button {
    border: none;
}

.options button {
    box-shadow: 0px 1px 0px 0px #1c1b18;
    background-color: #1c1b18;
    border-radius: 8px;
    display: inline-block;
    cursor: pointer;
    font-size: 14px;
    font-weight: bold;
    padding: 14px 30px;
    text-decoration: none;
    color: white;
    transition: 0.5s;
    margin-right: 10px;
}

.options button:hover {
    background-color: #fff;
    color: #1c1b18;
    box-shadow: 0 0 20px rgba(255, 68, 0, 0.6);
}

.options button:active {
    position: relative;
    top: 1px;
}

.save h1 {
    font-size: 25pt;
    margin-bottom: 20px;
}

.save-grid {
    display: grid;
    grid-template-columns: repeat(4, minmax(100px, 1fr));
    grid-gap: 30px;
    list-style: none;
    padding: 0;
}

.save-list {
    padding: 20px;
    background-color: rgb(45, 45, 45);
    border-radius: 5px;
    margin: 20px;
}


.save-item {
    margin: 0;
    padding: 10px;
    border-radius: 5px;
    background-color: rgb(60, 60, 60);
    transition: all 0.3s ease-in-out;
    cursor: pointer;
}

.save-item h2 {
    margin: 5px 0;
}

.save-item:hover {
    box-shadow: 0 0 20px rgba(255, 68, 0, 0.6);
    background-color: rgb(181, 181, 181);
    transform: scale(1.02);
}

.save-board {
    width: 100%;
}

@media (max-width: 1024px) {
    .chess-game {
        display: block;
        padding: 0;
        text-align: center;
    }

    .chess-board {
        width: 90%;
        height: auto;
    }

    .history {
        margin-top: 20px;
    }

    .save-grid {
        grid-template-columns: repeat(3, minmax(100px, 1fr));
    }
}

@media (max-width: 768px) {
    .save-grid {
        grid-template-columns: repeat(1, minmax(100px, 1fr));
    }
}

